--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".RegisterActivity"/>
         <activity android:name=".MenuActivity"/>
         <activity android:name=".ConversationActivity"/>
+        <activity android:name=".HaroldActivity"/>
     </application>
 
 </manifest>
