--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".RegisterActivity"/>
         <activity android:name=".MenuActivity"/>
+        <activity android:name=".FriendsListActivity"/>
+        <activity android:name=".ProfileViewActivity"/>
+        <activity android:name=".SettingsActivity"/>
         <activity android:name=".ConversationActivity"/>
     </application>
 
