--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".RegisterActivity"/>
         <activity android:name=".MenuActivity"/>
         <activity android:name=".FriendsListActivity"/>
+        <activity android:name=".SearchFriendsActivity"/>
         <activity android:name=".ProfileViewActivity"/>
         <activity android:name=".SettingsActivity"/>
         <activity android:name=".ConversationActivity"/>
