--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".ProfileViewActivity"/>
         <activity android:name=".SettingsActivity"/>
         <activity android:name=".ConversationActivity"/>
+        <activity android:name=".InvitationActivity"/>
     </application>
 
 </manifest>
